# boorubot-public

./: .env  Cargo.toml  config.toml  todo.md
src/: config.rs  main.rs
src/commands/: booru.rs  help.rs  mod.rs  ping.rs
