[package]
name = "boorubot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
booru-rs = "0.2.5"
deep-danbooru = "0.0.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.163", features = ["std", "derive"] }
serenity = { version = "0.11.5", default_features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"

[profile.dev]
opt-level = 0
strip = "none"

[profile.release]
opt-level = 3
strip = true
debug-assertions = false
